syntax = "proto3";
package new_schemes;

enum ThresholdScheme {
    ECIESThreshold = 0;
    
}

enum ThresholdOperation {
    Encryption = 0;
   
}

message PublicKeyEntry {
    u32 id = 1;
    new_schemes.ThresholdOperation operation = 2;
    new_schemes.ThresholdScheme scheme = 3;
    bytes key = 4;
}

